OSL bug in getmessage ("trace", "geom:name" , output) and possible fix #41276

Closed
opened 2014-08-01 02:06:43 +02:00 by mpst · 7 comments

Blender Version
Broken: 2.71

getmessage ("trace", "geom:name" , output) does not work when the output variable is a string

Fix:
Modify the function set_attribute_string in osl_services.cpp so it accepts string variables as the output type
e.g.
if(type.basetype == TypeDesc::STRING) {

**Blender Version** Broken: 2.71 getmessage ("trace", "geom:name" , output) does not work when the output variable is a string Fix: Modify the function set_attribute_string in osl_services.cpp so it accepts string variables as the output type e.g. if(type.basetype == TypeDesc::STRING) {
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @mpst

Added subscriber: @mpst
Sergey Sharybin self-assigned this 2014-08-01 10:44:02 +02:00

Fix might be correct, but would need some further tests. Mind attaching .blend demonstrating what exactly you're trying to achieve?

Fix might be correct, but would need some further tests. Mind attaching .blend demonstrating what exactly you're trying to achieve?
Author

I want to simulate a lens flare in an animation, so I need to know if certain point of a plane in front of the camera is directly illuminated by the main light source. I use "trace" to check this and then I get the hit object with "getmessage". Currently I am using the object:index attribute for this purpose, but according to the OSL specification geom:name should work as well
testflare.osl

I want to simulate a lens flare in an animation, so I need to know if certain point of a plane in front of the camera is directly illuminated by the main light source. I use "trace" to check this and then I get the hit object with "getmessage". Currently I am using the object:index attribute for this purpose, but according to the OSL specification geom:name should work as well [testflare.osl](https://archive.blender.org/developer/F100927/testflare.osl)

This issue was referenced by a192facd8c

This issue was referenced by a192facd8c5449ffe55b7978fe85a0080703411b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a192facd8c.

Closed by commit a192facd8c.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41276
No description provided.