Fix T41276: OSL bug in getmessage ("trace", "geom:name" , output)